# pytest_practice

./: .flake8  pyproject.toml  pytest.ini
tests/dependency/: test_one.py  test_two.py
