[tool.poetry]
name = "pytest_practice"
version = "0.1.0"
description = ""
authors = ["kacky24 <kakiuchi@crimson.q.t.u-tokyo.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest-dependency = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
